// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating interchange identity template has duplicate names should have no validation failures -> message 1`] = `"Interchange InterchangeName redeclares identity template DomainEntityIdentityTemplateName."`;

exports[`when validating interchange identity template has duplicate names should have no validation failures -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 6,
  "tokenText": "domain entity identity",
}
`;

exports[`when validating interchange identity template has multiple duplicate names should have validation failures -> message 1`] = `"Interchange InterchangeName redeclares identity template DomainEntityIdentityTemplateName1."`;

exports[`when validating interchange identity template has multiple duplicate names should have validation failures -> message 2`] = `"Interchange InterchangeName redeclares identity template DomainEntityIdentityTemplateName2."`;

exports[`when validating interchange identity template has multiple duplicate names should have validation failures -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 6,
  "tokenText": "domain entity identity",
}
`;

exports[`when validating interchange identity template has multiple duplicate names should have validation failures -> sourceMap 2`] = `
Object {
  "column": 4,
  "line": 8,
  "tokenText": "domain entity identity",
}
`;
